# sample_splunk_app

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ignore_splunk_internal_errors  .pytest.expect  .slimignore  .uccignore  Makefile  README.md  additional_packaging.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml
_submodules/0_cicd_base/default/: telemetry.conf
_submodules/addonfactory_test_matrix_splunk/: SC4S_matrix.conf  splunk_matrix.conf
docker/splunk/: Dockerfile  authorize.conf  splunk-launch.conf  ui-prefs.conf
docker/tests/: Dockerfile
package/: app.manifest
package/README/: inputs.conf.spec
package/default/: app.conf  eventgen.conf  inputs.conf  macros.conf  props.conf  pytest-splunk-addon-data.conf  transforms.conf
package/default/data/ui/nav/: default.xml
package/default/data/ui/views/: configuration.xml  engenie_chargers.xml  inputs.xml
package/lib/: requirements.txt
package/lib/solnlib/: __init__.py
package/lib/splunktalib/: __init__.py  credentials.py  event_writer.py  file_monitor.py  kv_client.py  orphan_process_monitor.py  rest.py  splunk_cluster.py  splunk_platform.py  state_store.py  timer.py  timer_queue.py
package/lib/splunktalib/common/: log.py  pattern.py  util.py  xml_dom_parser.py
package/lib/splunktalib/concurrent/: concurrent_executor.py  process_pool.py  thread_pool.py
package/lib/splunktalib/conf_manager/: conf_endpoints.py  conf_manager.py  data_input_endpoints.py  knowledge_objects.py  property_endpoints.py  request.py  ta_conf_manager.py
package/lib/splunktalib/schedule/: job.py  scheduler.py
package/lib/splunktaucclib/: __init__.py
package/lib/splunktaucclib/global_config/: configuration.py
package/local/data/ui/views/: engenie_chargers.xml
package/samples/: ev_charger_geniepoint.sample
scripts/: acscli_upload.sh  appinspect_status.sh  appinspect_upload.sh  build.sh  ci-up.sh  doUpload.sh  get-next-version.py  package.sh  splunkbase_auth.sh  splunkcloud_deploystatus.sh  splunkcloud_upload.sh  wait-for-log-line.sh
tests/: conftest.py  test_addon.py
